--- a/Site/HTML/index.html
+++ b/Site/HTML/index.html
@@ -25,7 +25,8 @@
 			</h2><br>
 			<a href="charities.html" style=" color: white;">Charities</a><br>
 			<a href="technology.html" style=" color: white;">Technology</a><br>
-			<a href="politics.html" style=" color: white;">Politics</a><br><br>
+			<a href="politics.html" style=" color: white;">Politics</a><br>
+			<a href="about_us.html" style=" color: white;">About us</a><br><br>
 			<input class="button" id="northAmerica" type="button" value="North America" onclick="northAmerica()"><br><br>
 			<input class="button" id="southAmerica" type="button" value="South America" onclick="southAmerica()"><br><br>
 			<input class="button" id="africa" type="button" value="Africa" onclick="africa()"><br><br>
@@ -34,7 +35,7 @@
 			<input class="button" id="rotate" type="button" value="Rotate" onclick="rotate()"><br><br>
 		</center>
 	</div>
-	<body style="margin: 0px; height: 100%; width: 100%;">
+	<body style="margin: 0px; height: 100%; width: 100%; overflow: hidden;">
 		<div id="na" class="popup">
 			<div style="padding: px; padding-top: 0px;">North America Air Quality</div><br>
 			<div>
