--- a/Site/HTML/technology.html
+++ b/Site/HTML/technology.html
@@ -3,72 +3,86 @@
 <html>
 <head>
 	<title>Technology</title>
+	<link rel="stylesheet" href="technology.css">
 </head>
-<body style="background-color: black;">
-	<h1 style="color: gold; text-align: center;">Technological Advancements To Fight Pollution</h1><br>
+<body>
+	<div class="header1">
+		<h1>Technologies</h1>
+	</div>
+	<div class="header2">
+		<h3>Menu: &nbsp; <a style="color:white; text-decoration:none;" &nbsp; href="home_page.html">Home</a> &nbsp; <a style="color:white; text-decoration:none;" href="index.html">Map</a> &nbsp; <a style="color:white; text-decoration:none;" href="charitiesv2.html">Charities</a> &nbsp; <a style="color:white; text-decoration:none;" href="politics.html">Politics</a> &nbsp; <a style="color:white; text-decoration:none;" href="aboutus.html">AboutUs</a></h3>
+	</div>
 
-	<div style="color: gold;">
-		<p style="border-color: gold; border: solid;">
+	<div class="bodytext" style="color: cyan;">
+		<p style="border-color: cyan; border: solid;">
 		<h3>The Ocean Cleanup</h3>
-		The Ocean Cleanup, has raised an estimated $31.5 million to develop a drifting V-shaped system designed to collect plastic pollution at the ocean’s surface as currents push it along.<br><br>
-		The system is autonomous in that it will calculate the optimal locations to which it will deploy and float around at.<br><br>
-		It is powered by the ocean currents and solar energy allowing it to be energy neural.<br><br>
-		It is scalable allowing other systems to be attached as more funding comes in.<br><br>
+		<img src="V_Floater.jpg" alt="V-shaped Floater"><br><br>
+		The Ocean Cleanup, has raised an estimated $31.5 million to develop a drifting V-shaped system designed to collect plastic pollution at the ocean’s surface as currents push it along.
+		The system is autonomous in that it will calculate the optimal locations to which it will deploy and float around at.
+		It is powered by the ocean currents and solar energy allowing it to be energy neural.
+		It is scalable allowing other systems to be attached as more funding comes in.
 		Capture efficiency is greatly increased by decreasing the speed at which the plastic is captured. This helps minimize the downforce and keep the trash from flowing down and around the nets.
 		<br><br>
 
-		<img src="V_Floater.jpg" alt="V-shaped Floater"><br><br>
 
-		<a href="https://www.theoceancleanup.com/" style=" color: #FF0033;">https://www.theoceancleanup.com</a>
+
+		<a href="https://www.theoceancleanup.com/" style=" color: orange;">https://www.theoceancleanup.com</a>
 		</p>
 		
-		<p style="border-color: gold; border: solid;">
+		<p style="border-color: cyan; border: solid;">
 		<h3>General Fusion</h3>
-		Transforming the world’s energy supply with the most practical path to fusion energy.
-		Fusion energy is a clean, safe, abundant and on-demand alternative for power generation. General Fusion is developing the world’s first commercially-viable fusion power plant.<br><br>
-
 		<img src="gfusion.jpg" alt="General Fusion"><br><br>
+		Transforming the world’s energy supply with the most practical path to fusion energy.
+		Fusion energy is a clean, safe, abundant and on-demand alternative for power generation. General Fusion is developing the world’s first commercially-viable fusion power plant.<br><br><br>
 
-		<a href="http://generalfusion.com/" style=" color: #FF0033;">http://generalfusion.com</a>
+
+
+		<a href="http://generalfusion.com/" style=" color: orange;">http://generalfusion.com</a>
 		</p>
 
-		<p style="border-color: gold; border: solid;">
+		<p style="border-color: cyan; border: solid;">
 		<h3>Carbon Engineering</h3>
+		<div class="images_CE">
+			<img src="carboncapture.jpg" alt="carbon fans">
+			<img src="carbondiagram.jpg" alt="engineering diagram"><br><br>
+		</div>
 		Carbon Engineering is building technologies to capture CO₂ directly from the atmosphere, and to use that CO2 in the synthesis of clean transportation fuels that displace crude oil.
 
 		Our business is to provide the technology and facilities to synthesize global-scale quantities of clean fuels from air, water, and renewable power.<br><br>
 
-		<img src="carboncapture.jpg" alt="carbon fans"><br><br>
 
-		<img src="carbondiagram.jpg" alt="engineering diagram"><br><br>
 
-		<a href="http://carbonengineering.com/" style=" color: #FF0033;">http://carbonengineering.com</a>
+		<a href="http://carbonengineering.com/" style=" color: orange;">http://carbonengineering.com</a>
 		</p>
 
-		<p style="border-color: gold; border: solid;">
+		<p style="border-color: cyan; border: solid;">
 		<h3>The Seabin Project</h3>
+		<img src="seabin.jpg" alt="The sea bin bucket"><br><br>
 		The Seabin Project is far more than a product, our ultimate goal is to
 		“have pollution free oceans for our future generations”.
 		To get there we are working to make the Seabin better and better and available to the maximum number of places. Also, educating and raising awareness to be able to one day live in a world where pollution devices are not needed.
 		<br><br>
 
-		<img src="seabin.jpg" alt="The sea bin bucket"><br><br>
-
-		<a href="http://seabinproject.com" style=" color: #FF0033;">http://seabinproject.com</a>
+		<a href="http://seabinproject.com" style=" color: orange;">http://seabinproject.com</a>
 		</p>
 
-		<p style="border-color: gold; border: solid;">
+		<p style="border-color: cyan; border: solid;">
 		<h3>Smog Free Project</h3>
+		<img src="smogtower.jpg" alt="Smog Free Tower"><br><br>
 		Studio Roosegaarde is the social design lab of Dutch artist and innovator Daan Roosegaarde. Together with his team of designers and engineers Roosegaarde creates landscapes of the future for a better world. The studio connects people, technology and space to improve daily life in urban environments and spark imagination.
 		<br><br>
 		SMOG FREE PROJECT is a series of urban innovations led by Daan Roosegaarde to reduce pollution and provide an inspirational experience of a clean future. SMOG FREE TOWER, SMOG FREE RING and SMOG FREE BICYCLE provide a local solution of clean air in public spaces. Here along with governments, students and the clean-tech industry, people can work together to make a whole city smog free. Recent SMOG FREE PROJECTS have been launched in China, the Netherlands and Poland.
 		<br><br>
 
-		<img src="smogtower.jpg" alt="Smog Free Tower"><br><br>
 
-		<a href="https://www.studioroosegaarde.net/project/smog-free-tower" style=" color: #FF0033;">https://www.studioroosegaarde.net/project/smog-free-tower</a>
+
+		<a href="https://www.studioroosegaarde.net/project/smog-free-tower" style=" color: orange;">https://www.studioroosegaarde.net/project/smog-free-tower</a>
 		</p>
 
+	</div>
+
+	<div class="cr">
+		<center>&copy; copyright Archangel</center>
 	</div>
 
 </body>
