Ready for merge

--- a/Site/HTML/index.html
+++ b/Site/HTML/index.html
@@ -13,8 +13,8 @@
 		<div class="dropdown">
 			<img class="ham" id="dropdown" src="hamburger-white.svg" onclick="dropdown()">
 			<div id="myDropdown" class="dropdown-content">
-		    	<a href="http://localhost:8080/Site/HTML/index.html">Home</a>
-		    	<a href="http://localhost:8080/Site/HTML/home_page.html">Sign Out</a>
+		    	<a href="index.html">Home</a>
+		    	<a href="home_page.html">Sign Out</a>
 		 	</div>
 		</div>
 	</header>
@@ -26,7 +26,7 @@
 			<a href="charities.html" style=" color: white;">Charities</a><br>
 			<a href="technology.html" style=" color: white;">Technology</a><br>
 			<a href="politics.html" style=" color: white;">Politics</a><br>
-			<a href="about_us.html" style=" color: white;">About us</a><br><br>
+			<a href="aboutus.html" style=" color: white;">About us</a><br><br>
 			<input class="button" id="northAmerica" type="button" value="North America" onclick="northAmerica()"><br><br>
 			<input class="button" id="southAmerica" type="button" value="South America" onclick="southAmerica()"><br><br>
 			<input class="button" id="africa" type="button" value="Africa" onclick="africa()"><br><br>
