--- a/Site/HTML/WorkingSignUpAndLogin/public/charities.html
+++ b/Site/HTML/WorkingSignUpAndLogin/public/charities.html
@@ -3,12 +3,18 @@
 <html>
 <head>
 	<title>Charities</title>
+	<link rel="stylesheet" href="charities.css">
 </head>
 <body style="background-color: 	rgb(64,64,64);">
-	<h1 style="color: cyan; text-align: center;">Charities Fighting Pollution</h1>
 
+	<div class="header1">
+		<h1>Charities Fighting Pollution</h1>
+	</div>
+	<div class="header2">
+		<h3>Menu: &nbsp; <a style="color:white; text-decoration:none;" &nbsp; href="home_page.html">Home</a> &nbsp; <a style="color:white; text-decoration:none;" href="index.html">Map</a> &nbsp; <a style="color:white; text-decoration:none;" href="politics.html">Politics</a> &nbsp; <a style="color:white; text-decoration:none;" href="technology.html">Technologies</a> &nbsp; <a style="color:white; text-decoration:none;" href="aboutus.html">AboutUs</a></h3>
+	</div>
 
-	<div style="color: cyan;">
+	<div class = "bodytext" style="color: cyan;">
 		<p style="border-color: cyan; border: solid;">
 			<h3>National Resources Defense Council</h3><br>
 			<h4 style="color: #00CC00;"><b>Mission Statement: </b></h4>
@@ -90,6 +96,10 @@
 			<a href="https://4ocean.com/?gclid=EAIaIQobChMIrd_b04LK2QIVxGF-Ch0oMg5aEAAYASAAEgIsy_D_BwE" style=" color: orange;">https://4ocean.com</a>
 		</p>
 
+	</div>
+
+	<div class="cr">
+		<center>&copy; copyright Archangel</center>
 	</div>
 </body>
 </html>
