Fixed links - Kyle

--- a/Site/HTML/WorkingSignUpAndLogin/public/main.html
+++ b/Site/HTML/WorkingSignUpAndLogin/public/main.html
@@ -14,8 +14,8 @@
 		<div class="dropdown">
 			<img class="ham" id="dropdown" src="hamburger-white.svg" onclick="dropdown()">
 			<div id="myDropdown" class="dropdown-content">
-		    	<a href="index.html">Home</a>
-		    	<a href="home_page.html">Sign Out</a>
+		    	<a href="main.html">Home</a>
+		    	<a href="index.html">Sign Out</a>
 		 	</div>
 		</div>
 	</header>
@@ -24,7 +24,7 @@
 			<h2 style="padding: 2px; margin: 2px;">
 				Menu
 			</h2><br>
-			<a href="charities.html" style=" color: white;">Charities</a><br>
+			<a href="charitiesv2.html" style=" color: white;">Charities</a><br>
 			<a href="technology.html" style=" color: white;">Technology</a><br>
 			<a href="politics.html" style=" color: white;">Politics</a><br>
 			<a href="aboutus.html" style=" color: white;">About us</a><br><br>
