--- a/Site/HTML/WorkingSignUpAndLogin/public/politics.html
+++ b/Site/HTML/WorkingSignUpAndLogin/public/politics.html
@@ -9,7 +9,7 @@
 			<h1>Politics</h1>
 		</div>
 		<div class="header2">
-			<h3>Menu: &nbsp; <a style="color:white; text-decoration:none;" &nbsp; href="home_page.html">Home</a> &nbsp; <a style="color:white; text-decoration:none;" href="index.html">Map</a> &nbsp; <a style="color:white; text-decoration:none;" href="charitiesv2.html">Charities</a> &nbsp; <a style="color:white; text-decoration:none;" href="technology.html">Technologies</a> &nbsp; <a style="color:white; text-decoration:none;" href="aboutus.html">AboutUs</a></h3>
+			<h3>Menu: &nbsp; <a style="color:white; text-decoration:none;" &nbsp; href="index.html">Home</a> &nbsp; <a style="color:white; text-decoration:none;" href="main.html">Map</a> &nbsp; <a style="color:white; text-decoration:none;" href="charitiesv2.html">Charities</a> &nbsp; <a style="color:white; text-decoration:none;" href="technology.html">Technologies</a> &nbsp; <a style="color:white; text-decoration:none;" href="aboutus.html">AboutUs</a></h3>
 		</div>
 
 			
