--- a/Site/HTML/WorkingSignUpAndLogin/public/technology.html
+++ b/Site/HTML/WorkingSignUpAndLogin/public/technology.html
@@ -10,7 +10,7 @@
 		<h1>Technologies</h1>
 	</div>
 	<div class="header2">
-		<h3>Menu: &nbsp; <a style="color:white; text-decoration:none;" &nbsp; href="home_page.html">Home</a> &nbsp; <a style="color:white; text-decoration:none;" href="index.html">Map</a> &nbsp; <a style="color:white; text-decoration:none;" href="charitiesv2.html">Charities</a> &nbsp; <a style="color:white; text-decoration:none;" href="politics.html">Politics</a> &nbsp; <a style="color:white; text-decoration:none;" href="aboutus.html">AboutUs</a></h3>
+		<h3>Menu: &nbsp; <a style="color:white; text-decoration:none;" &nbsp; href="index.html">Home</a> &nbsp; <a style="color:white; text-decoration:none;" href="main.html">Map</a> &nbsp; <a style="color:white; text-decoration:none;" href="charitiesv2.html">Charities</a> &nbsp; <a style="color:white; text-decoration:none;" href="politics.html">Politics</a> &nbsp; <a style="color:white; text-decoration:none;" href="aboutus.html">AboutUs</a></h3>
 	</div>
 
 	<div class="bodytext" style="color: cyan;">
