--- a/Site/HTML/aboutus.html
+++ b/Site/HTML/aboutus.html
@@ -12,7 +12,9 @@
 			<h3>Menu: &nbsp; <a style="color:white; text-decoration:none;" &nbsp; href="index.html">Home</a> &nbsp; <a style="color:white; text-decoration:none;" href="main.html">Map</a> &nbsp; <a style="color:white; text-decoration:none;" href="charitiesv2.html">Charities</a> &nbsp; <a style="color:white; text-decoration:none;" href="politics.html">Politics</a> &nbsp; <a style="color:white; text-decoration:none;" href="technology.html">Technologies</a></h3>
 		</div>
 		<div class="text">
-			<p>We are Archangel</br>Our goal is to spread awareness of increasing pollution levels.</br>Presented by a global map we can see the largest producers of pollution.</br>We have also provided links to charities working to lower pollution and help the environment.</p>
+			<h2>ARCHANGEL</h2>
+			<p>Archangel is a website to provide a single resource about pollution. </br> It gathers information from many other sources on different types of pollution and </br>how you can contribute to the various causes. It is meant to spread awareness on the </br> different factors that cause pollution and links to the charities and technologies that are helping </br> to remedy the problem. It also helps spread awareness on the different political </br> factors that are influencing our planet.</p> </br>
+			<h3>Helping to promote a healthier world.</h3>
 		</div>
 		<div class="cr">
 			<center>&copy; copyright Archangel</center>
