--- a/Site/HTML/index.html
+++ b/Site/HTML/index.html
@@ -37,14 +37,11 @@
 	</div>
 	<body style="margin: 0px; height: 100%; width: 100%; overflow: hidden;">
 		<div id="na" class="popup">
-			<div style="padding: px; padding-top: 0px;">North America Air Quality</div><br>
+			<div style="padding: px; padding-top: 0px;"><center style="margin-top: 10px;"><h2><span id="cont"></span> Air Quality</h2></center></div><br>
 			<div>
-				Los Angeles:
-				<h4 id="city"></h4>
-				<br>New York:
-				<br>Boulder:
-				<br>Miami:
-				<br>Chicago: 
+				<span style="color: black;"><b>Score: </b></span><span id="score"></span><br><br>
+				<span style="color: black;"><b>Quality: </b></span><span id="quality"></span><br><br>
+				<span style="color: black;"><b>Information: </b></span><span id="info"></span><br><br>
 			</div>
 		</div>
 		<canvas id="earth" style="margin: 0px; display: block;"></canvas>
