--- a/Site/HTML/Website/public/index2.html
+++ b/Site/HTML/Website/public/index2.html
@@ -5,26 +5,26 @@
 </head>
 <body>
   <center>
-  <h2 style="color: red;">
+  <h2 style="color: black;">
       Login to Archangel
     </h2>
-    <form class="Login" style="color: red;">
+    <form class="Login" style="color: black;">
       <br>
       <b>Username</b><br>
-      <input type="text" class="username" style="width: 23%; border: solid; border-color: red; margin: 5px;"><br><br>
+      <input type="text" class="username" style="width: 23%; border: solid; border-color: black; margin: 5px;"><br><br>
       <b>Password</b><br>
-      <input type="password" class="password" style="width: 23%; border-color: red; margin: 5px;"><br><br>
+      <input type="password" class="password" style="width: 23%; border-color: black; margin: 5px;"><br><br>
       <input type="submit" value="Login">
     </form>
-    <h2 style="color: red;">
+    <h2 style="color: black;">
       Sign Up for Archangel
     </h2>
-    <form class="CreateUser" style="color: red;">
+    <form class="CreateUser" style="color: black;">
       <br>
       <b>Email</b><br>
-      <input type="text" class="username" style="width: 23%; border: solid; border-color: red; margin: 5px;"><br><br>
+      <input type="text" class="username" style="width: 23%; border: solid; border-color: black; margin: 5px;"><br><br>
       <b>Password</b><br>
-      <input type="password" class="password" required="required" style="width: 23%; border-color: red; margin: 5px;"><br><br>
+      <input type="password" class="password" required="required" style="width: 23%; border-color: black; margin: 5px;"><br><br>
       <input type="submit" value="Create">
     </form>
   </center>
