--- a/Site/HTML/Website/public/main.html
+++ b/Site/HTML/Website/public/main.html
@@ -13,8 +13,8 @@
 		<div class="dropdown">
 			<img class="ham" id="dropdown" src="hamburger-white.svg" onclick="dropdown()">
 			<div id="myDropdown" class="dropdown-content">
-		    	<a href="index.html">Home</a>
-		    	<a href="index.html">Sign Out</a>
+		    	<a id="home" href="main.html">Home</a>
+		    	<a id="signout" href="/Site/HTML/Website/public/index.html">Sign Out</a>
 		 	</div>
 		</div>
 	</header>
@@ -45,8 +45,9 @@
 			</div>
 		</div>
 		<canvas id="earth" style="margin: 0px; display: block;"></canvas>
-		<script src="../ThreeJS/three.js"></script>
-		<script src="../ThreeJS/OrbitControls.js"></script>
+		<script src="/Site/ThreeJS/three.js"></script>
+		<script src="/Site/ThreeJS/OrbitControls.js"></script>
+		<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r79/three.min.js"></script> -->
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
 		<script src="jquery-2.2.0.js"></script>
 	<!-- 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jasmine/2.6.1/jasmine.min.js"></script>
